--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "generate-client-template",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"scripts": {
+  "start": "node index.js",
+  "test": "echo \"No tests yet\""
+},
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Adi Aharonov",
+  "license": "MIT",
+  "description": "A CLI tool to generate best-practice Next.js project templates.",
+  "bin": {
+  "generate-client-template": "./index.js"
+},
+"repository": {
+  "type": "git",
+  "url": "https://github.com/AdiAharonov/generate-client-template.git"
+}
 }
