--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "fs-extra": "^11.3.0"
+    "fs-extra": "^11.3.0",
+    "inquirer": "^12.4.2"
   }
 }
