--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.4.2"
   },
